// Generated file
import "ccsds_mal/types.proto";
import "pusGroundModel/PusElement.proto";


package pusGroundModel.protobuf;

message Pus005OnBoardEvent {
extensions 5 to 105;

  optional ccsds_mal.protobuf.UINTEGER reportId = 1;
  optional ccsds_mal.protobuf.UINTEGER onBoardStatus = 2;
  optional ccsds_mal.protobuf.STRING alarmLevel = 3;
  optional pusGroundModel.protobuf.PusElement pusElement = 4;
}
